@@ -1,5 +1,3 @@
-* handle mouse wheel
-
 * GUI: a single dialog for Model > Export... options and for "info models"
 
 * GUI, printing (hardcopy): this part has been neglected for some time.
